--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+
+    <nav>
+      <li><a href="/" class='logotext'>Home</a></li>
+
+      <% if user_signed_in? %>
+        <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete%></li>
+      <% else %>
+        <li><a href="/users/sign_in">Log In</a></li>
+        <li><a href="/users/sign_up">Sign Up</a></li>
+      <% end %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
