--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Decks#new</h1>
-<p>Find me in app/views/decks/new.html.erb</p>
+<h1 class='content-title'>Create A Deck</h1>
+
+<div class='deck-creation-wrapper'>
+
+  <div class='search-area-wrapper'>
+
+  </div>
+
+  <div class='card-result-wrapper'>
+
+  </div>
+
+  <div class='deck-list-wrapper'>
+
+  </div>
+
+</div>
