--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the decks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.content-title {
+  font-size: 2.5em;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.deck-creation-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 0.35fr;
+  grid-template-rows: 0.15fr 1fr;
+  height: 1000px;
+  width: 90%;
+  margin: 0 auto 25px;
+  border: 1px solid green;
+
+  div {
+    border: 1px solid blue;
+  }
+}
+
+.search-area-wrapper {
+  grid-column: 1 / 3;
+}
+
+.card-result-wrapper {
+  
+}
