--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -7,7 +7,19 @@
   </div>
 
   <div class='card-result-wrapper'>
-
+    <% @cards.each_with_index do |card| %>
+      <div class='card-result'>
+        <div class='card-image' style="background-image: url(<%= card.image_url %>)"></div>
+        <div class='card-information'>
+          <h3 class='card-name'><%= card.name %></h3>
+          <p class='card-mana-cost'><%= card.mana_cost %><p>
+          <p class='card-type'><%= card.type %><p>
+          <p class='card-subtype'><%= card.subtypes %><p>
+          <p class='card-set'><%= card.set_name %><p>
+          <p class='card-rarity'><%= card.rarity %><p>
+        </div>
+      </div>
+    <% end %>
   </div>
 
   <div class='deck-list-wrapper'>
