--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Decks#index</h1>
-<p>Find me in app/views/decks/index.html.erb</p>
+<div> Your decks: </div>
+<% if @decks.length != 0%>
+	<% for deck in @decks %>
+		<div><%= deck.name %></div>
+		<%= link_to "Edit this deck", edit_user_deck_path(current_user, deck) %>
+	<% end %>
+
+<% else %>
+	<div>No decks currently made.</div>
+	<div><%= link_to "Click here to make a new deck", new_user_deck_path(current_user) %></div>
+
+
+<% end %>
