--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,2 +1,14 @@
 <h1>Decks#new</h1>
-<p>Find me in app/views/decks/new.html.erb</p>
+
+<%= form_for ([current_user , @deck]) do |d| %>
+
+<%= d.text_field  :name %>
+
+<%= d.hidden_field :cardlist, :value => "" %>
+<%= d.hidden_field :user_id, :value => current_user.id %>
+
+<%= d.submit %>
+
+
+	
+<% end %>
