--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
       <% if user_signed_in? %>
         <li><%= link_to 'New Deck', new_user_deck_path(current_user) %></li>
+        <li><%= link_to 'Show Deck', user_deck_path(current_user) %></li>
         <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete%></li>
       <% else %>
         <li><a href="/users/sign_in">Log In</a></li>
