add card to deck form

--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -40,3 +40,15 @@
   background-repeat: no-repeat;
   margin: 0 auto 10px;
 }
+
+.deck-title {
+  margin-bottom: 10px;
+}
+
+.card-type-deck-title {
+  margin-bottom: 5px;
+}
+
+.type-list:last-child {
+  margin-bottom: 10px;
+}
