--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class='card-result-wrapper'>
-    <% @cards.each_with_index do |card| %>
+    <% @cards.each_with_index do |card, i| %>
       <div class='card-result'>
         <div class='card-image' style="background-image: url(<%= card.image_url %>)"></div>
         <div class='card-information'>
@@ -17,13 +17,33 @@
           <p class='card-subtype'><%= card.subtypes %><p>
           <p class='card-set'><%= card.set_name %><p>
           <p class='card-rarity'><%= card.rarity %><p>
+
+          <%= form_tag "/addcard", :name => "addCard" do %>
+            <%= hidden_field_tag :deck_id, @deck.id %>
+            <%= hidden_field_tag :user_id, current_user.id %>
+            <%= hidden_field_tag :card_id, card.id %>
+            <input type='submit' value="add card">
+          <% end %>
+
         </div>
       </div>
     <% end %>
   </div>
 
   <div class='deck-list-wrapper'>
-
+    <h2 class='deck-title'>Deck List</h2>
+    <h3 class='card-type-deck-title'>Creature</h3>
+    <div class='creature-list type-list'></div>
+    <h3 class='card-type-deck-title'>Sorcery</h3>
+    <div class='sorcery-list type-list'></div>
+    <h3 class='card-type-deck-title'>Instant</h3>
+    <div class='instant-list type-list'></div>
+    <h3 class='card-type-deck-title'>Artifacts</h3>
+    <div class='artifact-list type-list'></div>
+    <h3 class='card-type-deck-title'>Enchantments</h3>
+    <div class='enchantment-list type-list'></div>
+    <h3 class='card-type-deck-title'>Lands</h3>
+    <div class='lands-list type-list'></div>
   </div>
 
 </div>
