--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,25 +5,34 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <base href="/">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
 
-    <nav>
-      <li><a href="/" class='logotext'>Home</a></li>
+    <!-- Page Wrapper -->
+    <div class='page-wrapper'>
 
-      <% if user_signed_in? %>
-        <li><%= link_to 'Profile', user_profile_path(current_user) %></li>
-        <li><%= link_to 'New Deck', new_user_deck_path(current_user) %></li>
-        <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete%></li>
-      <% else %>
-        <li><a href="/users/sign_in">Log In</a></li>
-        <li><a href="/users/sign_up">Sign Up</a></li>
-      <% end %>
-    </nav>
+      <!-- Navigation Bar -->
+      <nav>
+        <li><a href="/"><div id="mtglogo"></div></a></li>
 
-    <%= yield %>
+        <% if user_signed_in? %>
+          <li><%= link_to 'Profile', user_profile_path(current_user), :class => "navtextlink" %></li>
+          <li><%= link_to 'New Deck', new_user_deck_path(current_user), :class => "navtextlink" %></li>
+          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, :class => "navtextlink" %></li>
+        <% else %>
+          <li><a href="/users/sign_in" class="navtextlink">Log In</a></li>
+          <li><a href="/users/sign_up" class="navtextlink">Sign Up</a></li>
+        <% end %>
+      </nav>
+
+      <!-- Content Area -->
+      <div class='main-content'>
+        <%= yield %>
+      </div>
+
   </body>
 </html>
