--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,17 @@
-<h1>MTG Deck Builder!</h1>
+<div class='home-content-wrapper'>
+  <div class='outer-zoom'>
+    <div class='motto-banner banner-image'>
+      <h3 class='banner-title'>Up Your Game</h3>
+    </div>
+  </div>
+  <div class='outer-zoom'>
+    <div class='show-deck-banner banner-image'>
+      <h3 class='banner-title'>Compare Decks</h3>
+    </div>
+  </div>
+  <div class='outer-zoom'>
+    <div class='sign-up-banner banner-image'>
+      <h3 class='banner-title'>Sign Up For Free</h3>
+    </div>
+  </div>
+</div>
