--- a/app/assets/stylesheets/sitewide.scss
+++ b/app/assets/stylesheets/sitewide.scss
@@ -6,35 +6,54 @@
   font-size: 16px;
 }
 
+.page-wrapper {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  grid-template-rows: 0.1fr 1fr;
+}
+
 // Navigation Bar
 nav {
-  display: flex;
   background-color: #F5E4B7;
 
+  // Left Logo - links to homepage
   #mtglogo {
-    height: 65px;
+    height: 62.5px;
     width: 200px;
     background-image: url('mtg_logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     margin: 15px 0 20px 25px;
-  }
-
-  li {
-    list-style-type: none;
-
-    .navtextlink {
-      margin: 30px;
-      background-color: pink;
-    }
-  }
-
-  li:first-child {
     margin-right: auto;
   }
 
-  li:last-child a {
-    margin-right: 60px;
+  ul {
+    display: flex;
+
+    li {
+      display: inline-block;
+      list-style-type: none;
+    }
+
+    li:first-child {
+      margin-right: auto;
+    }
+
+    .navtextlink {
+      color: #706E64;
+      display: block;
+      line-height: 3em;
+      font-size: 1.1em;
+      font-weight: bold;
+      padding: 1.3em 2em;
+      text-decoration: none;
+    }
+
+    .navtextlink:hover {
+      color: #F5E4B7;
+      background-color: #706E64;
+    }
   }
 }
 
