--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,18 @@
 
       <!-- Navigation Bar -->
       <nav>
-        <li><a href="/"><div id="mtglogo"></div></a></li>
+        <ul>
+          <li><a href="/"><div id="mtglogo"></div></a></li>
 
-        <% if user_signed_in? %>
-          <li><%= link_to 'Profile', user_profile_path(current_user), :class => "navtextlink" %></li>
-          <li><%= link_to 'New Deck', new_user_deck_path(current_user), :class => "navtextlink" %></li>
-          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, :class => "navtextlink" %></li>
-        <% else %>
-          <li><a href="/users/sign_in" class="navtextlink">Log In</a></li>
-          <li><a href="/users/sign_up" class="navtextlink">Sign Up</a></li>
-        <% end %>
+          <% if user_signed_in? %>
+            <li><%= link_to 'PROFILE', user_profile_path(current_user), :class => "navtextlink" %></li>
+            <li><%= link_to 'NEW DECK', new_user_deck_path(current_user), :class => "navtextlink" %></li>
+            <li><%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete, :class => "navtextlink" %></li>
+          <% else %>
+            <li><a href="/users/sign_in" class="navtextlink">LOG IN</a></li>
+            <li><a href="/users/sign_up" class="navtextlink">SIGN UP</a></li>
+          <% end %>
+        </ul>
       </nav>
 
       <!-- Content Area -->
