--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,17 @@
 <div class='home-content-wrapper'>
   <div class='outer-zoom'>
     <div class='motto-banner banner-image'>
-      <h3 class='banner-title'>Up Your Game</h3>
+      <h3 class='banner-title'>UP YOUR GAME</h3>
     </div>
   </div>
   <div class='outer-zoom'>
     <div class='show-deck-banner banner-image'>
-      <h3 class='banner-title'>Compare Decks</h3>
+      <h3 class='banner-title'>DECKS</h3>
     </div>
   </div>
   <div class='outer-zoom'>
     <div class='sign-up-banner banner-image'>
-      <h3 class='banner-title'>Sign Up For Free</h3>
+      <h3 class='banner-title'>SIGN UP FOR FREE</h3>
     </div>
   </div>
 </div>
