--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,60 +4,62 @@
 
 .home-content-wrapper {
   height: 100%;
-  width: 98%;
+  width: 100%;
   margin: 0 auto;
-  padding: 15px 0;
   display: grid;
-  grid-gap: 15px;
   grid-template-rows: 0.75fr 1fr;
   grid-template-columns: 1fr 1fr;
 }
 
 .outer-zoom {
-  border-radius: 5px;
-  border: 2px solid;
+  border: 1px solid;
   overflow: hidden;
+
+  .banner-image {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease;
+    cursor: pointer;
+
+    .banner-title {
+      color: white;
+      font-weight: 700;
+      font-size: 2.5em;
+
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black,
+                       0px 15px 5px rgba(0,0,0,0.1),
+                       10px 20px 5px rgba(0,0,0,0.05),
+                       -10px 20px 5px rgba(0,0,0,0.05);
+    }
+  }
+
+  .motto-banner {
+    background-image: url('motto_banner.jpg');
+    background-size: cover;
+    background-position: 0 -125px;
+    grid-column: 1 / 3;
+  }
+
+  .show-deck-banner {
+    background-image: url('deck_banner.jpg');
+    background-size: cover;
+    background-position: 0 -15px;
+  }
+
+  .sign-up-banner {
+    background-image: url('sign_up_banner.jpg');
+    background-size: cover;
+    background-position: 0 -65px;
+  }
 }
 
 .outer-zoom:first-child {
   grid-column: 1 / 3;
 }
 
-.banner-image {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 1s ease;
-  cursor: pointer;
-}
-
 .banner-image:hover {
   transform: scale(1.15);
-}
-
-.motto-banner {
-  background-image: url('motto_banner.png');
-  background-size: cover;
-  background-position: 0 -125px;
-  scale: 1.1;
-  grid-column: 1 / 3;
-}
-
-.show-deck-banner {
-  background-image: url('deck_banner.jpg');
-  background-size: cover;
-  background-position: 0 -15px;
-}
-
-.sign-up-banner {
-  background-image: url('sign_up_banner.jpg');
-  background-size: cover;
-  background-position: 0 -65px;
-}
-
-.banner-title {
-  font-weight: normal;
-  font-size: 2.5em;
 }
