--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -40,6 +40,9 @@
   background-repeat: no-repeat;
   margin: 0 auto 10px;
 }
+.card-information{
+  text-align: center;
+}
 
 .deck-title {
   margin-bottom: 10px;
