--- a/app/views/decks/edit.html.erb
+++ b/app/views/decks/edit.html.erb
@@ -296,21 +296,34 @@
 <div class='card-result-wrapper'>
     <% @cards.each_with_index do |card, i| %>
       <div class='card-result'>
-        <div class='card-image' style="background-image: url(<%= card.image_url %>)"></div>
+        <% if card.image_url == nil %>
+        	<div class='card-image' style="background-image: url(<%= image_url('mtg_cardback.jpg')%>)"></div>
+      	<% else %>
+        	<div class='card-image' style="background-image: url(<%= card.image_url %>)"></div>
+      	<% end %>
         <div class='card-information'>
           <h3 class='card-name'><%= card.name %></h3>
-          <p class='card-mana-cost'><%= card.mana_cost %><p>
-          <p class='card-type'><%= card.type %><p>
-          <p class='card-subtype'><%= card.subtypes %><p>
-          <p class='card-set'><%= card.set_name %><p>
-          <p class='card-rarity'><%= card.rarity %><p>
+          <p class='card-mana-cost'><%= card.mana_cost %></p>
+          <p class='card-type'><%= card.type %></p>
+          	<% if card.subtypes == nil %>
 
-          <%= form_tag "/addcard", :name => "addCard" do %>
-            <%= hidden_field_tag :deck_id, @deck.id %>
-            <%= hidden_field_tag :user_id, current_user.id %>
-            <%= hidden_field_tag :card_id, card.id %>
-            <input type='submit' value="add card">
-          <% end %>
+          <p class='card-subtype'></p>
+          	<% else %>
+
+          <p class='card-subtype'><%= card.subtypes.join(', ') %></p>
+          	<% end %>
+          <p class='card-set'><%= card.set_name %></p>
+          <p class='card-rarity'><%= card.rarity %></p>
+          	<% if user_signed_in? %>
+	          <% if current_user.id == @deck.id %>
+		          <%= form_tag "/addcard", :name => "addCard" do %>
+		            <%= hidden_field_tag :deck_id, @deck.id %>
+		            <%= hidden_field_tag :user_id, current_user.id %>
+		            <%= hidden_field_tag :card_id, card.id %>
+		            <input type='submit' value="add card">
+		          <% end %>
+		        <% end %>
+	    	<% end %>
 
         </div>
       </div>
@@ -320,7 +333,11 @@
   <div class='deck-list-wrapper'>
     <h2 class='deck-title'>Deck List</h2>
 		<% @deck_card_names.each_with_index do |c, i| %>
+		<% if  @deck_card_images[i] == nil %>
+			<div class='deck-list-card' style="background-image: url(<%= image_url('mtg_cardback.jpg') %>)"><%= c %></div>
+		<% else %>
 			<div class='deck-list-card' style="background-image: url(<%= @deck_card_images[i] %>)"><%= c %></div>
+		<% end %>
 		<% end %>
 
     <h3 class='card-type-deck-title'>Creature</h3>
@@ -340,13 +357,13 @@
 	<%if @pagenum.to_i == 1 %>
 		<ul>
 			<!-- this link goes to the next page of all the cards in magic if its on page 1 -->
-			<li> <a href="../../../../../users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i + 1 %>">Next</a></li>
+			<li> <a href="/users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i + 1 %>">Next</a></li>
 		</ul>
 	<% else %>
 		<ul>
 			<!-- these links goes to the pages of all the cards based on what page you are on. -->
-			<li> <a href="../../../../../users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i + 1 %>">Next</a></li>
-			<li> <a href="../../../../../users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i - 1 %>">Previous</a></li>
+			<li> <a href="/users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i + 1 %>">Next</a></li>
+			<li> <a href="/users/<%= @user.id %>/decks/<%= @deck.id %>/edit/<%= @pagenum.to_i - 1 %>">Previous</a></li>
 		</ul>
 	<% end %>
 </div>
