--- a/app/assets/stylesheets/sitewide.scss
+++ b/app/assets/stylesheets/sitewide.scss
@@ -88,6 +88,7 @@ nav {
       padding: 1.6em 2em 1.1em;
       text-decoration: none;
       border-bottom: 5px solid transparent;
+      transition: all 0.5s ease;
       letter-spacing: 1px;
     }
 
