--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,7 +7,7 @@
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 0.75fr 1fr;
+  grid-template-rows: 0.65fr 1fr;
   grid-template-columns: 1fr 1fr;
 }
 
@@ -28,6 +28,7 @@
       color: white;
       font-weight: 700;
       font-size: 2.5em;
+      letter-spacing: 1px;
 
       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black,
                        0px 15px 5px rgba(0,0,0,0.1),
