Updated decks to have name, type, and image urls. Updated edit + result and their functions to run with database

--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -6,6 +6,9 @@
 
 <%= d.hidden_field :cardlist, :value => "" %>
 <%= d.hidden_field :user_id, :value => current_user.id %>
+<%= d.hidden_field :cardtypes, :value => "" %>
+<%= d.hidden_field :imageurls, :value => "" %>
+<%= d.hidden_field :cardnames, :value => "" %>
 
 <%= d.submit %>
 
