--- a/app/views/decks/edit.html.erb
+++ b/app/views/decks/edit.html.erb
@@ -315,7 +315,7 @@
           <p class='card-set'><%= card.set_name %></p>
           <p class='card-rarity'><%= card.rarity %></p>
           	<% if user_signed_in? %>
-	          <% if current_user.id == @deck.id %>
+	          <% if current_user.id == @deck.user_id %>
 		          <%= form_tag "/addcard", :name => "addCard" do %>
 		            <%= hidden_field_tag :deck_id, @deck.id %>
 		            <%= hidden_field_tag :user_id, current_user.id %>
@@ -333,13 +333,13 @@
   <div class='deck-list-wrapper'>
     <h2 class='deck-title'>Deck List</h2>
 		<% @deck_card_names.each_with_index do |c, i| %>
-			<% if  @deck_card_images[i] == nil %>
+			<% if  @deck_card_images[i] == nil || @deck_card_images[i] == "nil" %>
 				<div class='deck-list-card' style="background-image: url(<%= image_url('mtg_cardback.jpg') %>)"><%= c %></div>
 			<% else %>
 				<div class='deck-list-card' style="background-image: url(<%= @deck_card_images[i] %>)"><%= c %></div>
 			<% end %>
 			<% if user_signed_in? %>
-	          <% if current_user.id == @deck.id %>
+	          <% if current_user.id == @deck.user_id %>
 					<%= form_tag "/remove_card" , :name => "removeCard" do %>
 						<%= hidden_field_tag :card_index, i %>
 						<%= hidden_field_tag :deck_id, @deck.id %>
