--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,13 +1,20 @@
-<div> Your decks: </div>
-<% if @decks.length != 0%>
-	<% for deck in @decks %>
-		<div><%= deck.name %></div>
-		<%= link_to "Edit this deck", edit_user_deck_path(current_user, deck) %>
+<% if user_signed_in?%>
+	<div> Your decks: </div>
+	<% if @decks.length != 0%>
+		<% for deck in @decks %>
+			<% if deck.user_id == current_user.id %>
+				<div><%= deck.name %></div>
+
+				<a href="/users/<%= deck.user_id %>/decks/<%= deck.id %>/edit/1">Edit this deck</a>
+			<% end %>
+		<% end %>
+
+	<% else %>
+		<div>No decks currently made.</div>
+		<div><%= link_to "Click here to make a new deck", new_user_deck_path(current_user) %></div>
 	<% end %>
 
-<% else %>
-	<div>No decks currently made.</div>
-	<div><%= link_to "Click here to make a new deck", new_user_deck_path(current_user) %></div>
-
-
 <% end %>
+
+
+<div> </div>
