--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -71,7 +71,7 @@
 #hover-card-image {
   height: 500px;
   width: 355px;
-  background-image: url("mtg_cardback.jpg");
+  // background-image: url("mtg_cardback.jpg");
   background-size: contain;
   background-repeat: no-repeat;
 }
