--- a/app/assets/stylesheets/decks.scss
+++ b/app/assets/stylesheets/decks.scss
@@ -69,11 +69,12 @@
 }
 
 #hover-card-image {
-  height: 500px;
+  height: 495px;
   width: 355px;
   background-image: url("mtg_cardback.jpg");
   background-size: contain;
   background-repeat: no-repeat;
+  border-radius: 5%;
 }
 
 
