stlyed login signup and forgotpassword forms

--- a/app/assets/stylesheets/login_signup.scss
+++ b/app/assets/stylesheets/login_signup.scss
@@ -3,12 +3,19 @@
     color: #d4d4d4;
 
     background-color:	#282828;
-    width: 25vw;
+    width: 30rem;
     // height: 53vh;
     padding: 5%;
     border-radius: 10px;
     box-shadow: 3px 3px 3px black;
     margin: 3% auto;
+
+}
+
+h2{
+  position: relative;
+  bottom: 30px;
+  font-weight: 600;
 
 }
 
@@ -18,13 +25,14 @@
 }
 
 .emailForms{
-  margin-bottom: 5%;
+  margin-bottom: 7%;
+  width: 20rem;
 
 }
 
 .passwordForms{
   margin-bottom: 5%;
-
+  width: 20rem;
 }
 
 img{
