prior to merge with master

--- a/app/views/decks/show.html.erb
+++ b/app/views/decks/show.html.erb
@@ -1,98 +1,8 @@
+<h1>Decks#show</h1>
+<p>Find me in app/views/decks/show.html.erb</p>
+<h4>Your Decks</h4>
 
-<h2>deck name: <%= @deck.name %></h2>
-<br>
-<br>
-<% creature = {} %>
-<% sorcery = {} %>
-<% instant = {} %>
-<% artifact = {} %>
-<% enchantment = {} %>
-<% lands = {} %>
-<% misc = {} %>
-
-<% @card_list_hash.each do |cardname, array| %>
-    <% if array[1].include?('Creature')%>
-      <% creature[cardname] = array %>
-    <% elsif array[1].include?('Sorcery')%>
-      <% sorcery[cardname] = array %>
-    <% elsif array[1].include?('Instant')%>
-      <% instant[cardname] = array %>
-    <% elsif array[1].include?('Enchantment')%>
-      <% enchantment[cardname] = array %>
-    <% elsif array[1].include?('Land')%>
-      <% lands[cardname] = array %>
-    <% elsif array[1].include?('Artifact')%>
-      <% artifact[cardname] = array %>
-    <% else %>
-      <% misc[cardname] = array %>
-    <% end %>
+<% @deck.each do |d| %>
+        <div>Deck Name: <%= d.name %></div>
+        <br>
 <% end %>
-<div class='show-deck-card-wrapper'>
-  <div class='temp-left'>
-    <h3>DECK LIST</h3>
-    <h3 class='card-type-deck-title'>Creature</h3>
-    <div class='creature-list type-list'>
-      <% creature.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Sorcery</h3>
-    <div class='sorcery-list type-list'>
-      <% sorcery.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Instant</h3>
-    <div class='instant-list type-list'>
-      <% instant.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Artifacts</h3>
-    <div class='artifact-list type-list'>
-      <% artifact.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Enchantments</h3>
-    <div class='enchantment-list type-list'>
-      <% enchantment.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Lands</h3>
-    <div class='lands-list type-list'>
-      <% lands.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-    <h3 class='card-type-deck-title'>Misc.</h3>
-    <div class='misc-list type-list'>
-      <% misc.each do |name, array| %>
-        <p class='card-in-deck'><%= array[0] %>x - <%=name%></p>
-      <% end %>
-    </div>
-
-  </div>
-  <div class='temp-right'>
-    <div id='hover-card-image'></div>
-  </div>
-</div>
-<% if user_signed_in? %>
-  <% if current_user.id == @deck.user_id %>
-   <div> <%= link_to "Edit this deck", edit_user_deck_path %></div>
-  <% end %>
-<% end %>
-<script type="text/javascript">
-  var hoverCard = document.getElementById('hover-card-image');
-  var cardsInDeck = document.getElementsByClassName('card-in-deck');
-  var cardImages = "<%= raw @image_set_string %>";
-  var cardImagesArray = cardImages.split(",")
-
-  for(let i = 0; i < cardsInDeck.length; i++) {
-    cardsInDeck[i].addEventListener('mouseover', function() {
-      hoverCard.style.backgroundImage = `url(${cardImagesArray[i]})`;
-    })
-  }
-
-</script>
