--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -3,6 +3,7 @@
 	<% if @decks.length != 0%>
 		<% for deck in @decks %>
 			<% if deck.user_id == current_user.id %>
+				<div class="card-image card-back"></div>
 				<div><%= deck.name %></div>
 
 				<a href="/users/<%= deck.user_id %>/decks/<%= deck.id %>/edit/1">Edit this deck</a>
